fix details:
- background too small
- main title scrollbar
- program cards

--- a/css/main.css
+++ b/css/main.css
@@ -18,21 +18,19 @@ body {
   background-color: #4d515c;
   display: flex;
   flex-direction: column;
-  /* 毛玻璃測試用背景 */
-  /*  background-image: url("../image/Rectangle.svg"); 
+  background-image: url("../image/Rectangle_edit.png");
   height: 100%;
   background-position: center bottom;
   background-size: cover;
-  background-attachment: fixed !important; */
+  background-attachment: fixed !important;
   width: auto;
-  min-width: 100%;
   margin: 0 auto;
   overflow-x: hidden;
   justify-content: space-around;
 }
 
 .background-image {
-  background-image: url("../image/Rectangle.svg");
+  background-image: url("../image/Rectangle_edit.png");
   background-position: center bottom;
   height: 100%;
   min-width: 100%;
@@ -1048,7 +1046,6 @@ white-line {
     width: 30vw;
     max-width: 780px;
     min-height: 45vh;
-    max-height: 70vh;
     margin: auto;
   }
   #schedule .box {
@@ -1201,21 +1198,6 @@ white-line {
     /* backdrop-filter: blur(4px); */
     -webkit-backdrop-filter: unset;
             backdrop-filter: unset;
-  }
-  #Speaker_phone {
-    display: none;
-  }
-  #carouselSpeaker {
-    display: block;
-  }
-  .carousel-inner {
-    padding-bottom: 1vh;
-  }
-  #speaker .carousel-inner .carousel-item .card_d {
-    width: 30vw;
-    max-width: 780px;
-    height: 550px;
-    margin: auto;
   }
   .card_Speaker {
     display: flex;
